[project]
name = "ctrader-oauth-fetcher"
version = "1.0.1"
readme = "README.md"
description = "One-time OAuth token fetcher for cTrader Open API"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ctrader-oauth-fetcher = "ctrader_oauth_fetcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
